<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="ballot_logo">Ballot Logo image</string>
    <string name="strUpcomingElections">Upcoming Elections</string>
    <string name="strSavedElections">Saved Elections</string>
    <string name="strFindMyRep">FIND MY REPRESENTATIVES</string>
    <string name="str_election_info">Election Information</string>
    <string name="str_voting_location">Voting Locations</string>
    <string name="str_ballot_information">Ballot Information</string>

    <string name="voting_location_text"><u>Click here for voting location</u></string>
    <string name="ballot_information_text"><u>Click here for ballot information</u></string>
    <string name="location_required_error">Location services must be enabled to use the app</string>

    <string name="follow_election">Follow Election</string>
    <string name="unfollow_election">Unfollow Election</string>
    <string name="representative_search_text">Representative Search</string>
    <string name="find_my_representatives_text">Find My Representatives</string>
    <string name="use_my_location_text">Use My Location</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>
    <string name="settings">Settings</string>
    <string name="my_representatives">My Representatives</string>
    <string name="manual_enable_while_use_permission">This app needs you to allow while in use location permission in order to fetch the current location.Grant the while in use location permission under Settings->Apps->Political Preparedness->Permissions.</string>
    <string name="permission_denied_explanation">You need to grant location permission in order to fetch the current location.Click Settings here and grant permission</string>
    <string name="rep_pic">Representative Profile Picture</string>
    <string name="twitter_logo">Twitter logo</string>
    <string name="facebook_logo">Facebook Logo</string>
    <string name="web_logo">www logo</string>
    <string name="address_not_found">"Adress not found"</string>
    <string name="error_elections">Unexpected error retrieving elections</string>
    <string name="error_voter_info">Unexpected error retrieving voter info</string>
    <string name="error_representatives">Unexpected error retrieving representatives</string>
    <string name="current_location_not_in_us">"Current location is not in US!"</string>
    <string name="err_no_connection">Internet connection is required to find the representatives</string>
    <string name="error">Error</string>
    <string name="invalid_election_request">The selected Election does not have valid parameters. Please try another election.</string>
    <string name="progress_bar_content_description">Progress bar icon</string>
    <string name="error_restore">error in restoring saved instance state</string>
    <string name="error_retrive_election_database">error retrieving election from database</string>
    <string name="error_worker">error in election worker while inserting elections</string>


</resources>
