<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.representative.RepresentativeViewModel" />
    </data>
    <!--  motion scene to hide form on vertical scroll. -->
    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/motionLayout"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        app:layoutDescription="@xml/fragment_representative_scene">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/representative_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="@dimen/progress_bar"
                android:layout_height="@dimen/progress_bar"
                app:apiStatus="@{viewModel.status}"
                android:contentDescription="@string/progress_bar_content_description"
                android:indeterminateDrawable="@drawable/loading_animation"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/search_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/txtView_bold"
            android:textSize="@dimen/big_text_size"
            android:text="@string/representative_search_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/address_line_1"
            android:hint="@string/address_line_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:text="@={viewModel.address.line1}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_title" />

        <EditText
            android:id="@+id/address_line_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address_line_2"
            android:text="@={viewModel.address.line2}"
            android:inputType="textPostalAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_line_1" />

        <EditText
            android:id="@+id/city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/city"
            android:inputType="textPostalAddress"
            android:text="@={viewModel.address.city}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/state"
            app:layout_constraintTop_toBottomOf="@id/address_line_2" />

        <Spinner
            android:id="@+id/state"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:entries="@{viewModel.states}"
            android:selectedItemPosition="@={viewModel.selectedIndex}"
            android:inputType="textPostalAddress"
            app:layout_constraintStart_toEndOf="@id/city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/city"
            app:layout_constraintBottom_toBottomOf="@id/city"/>

        <EditText
            android:id="@+id/zip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/zip"
            android:inputType="number"
            android:maxLength="5"
            android:text="@={viewModel.address.zip}"
            app:layout_constraintEnd_toEndOf="@id/city"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/city" />

        <Button
            android:id="@+id/button_search"
            android:layout_width="match_parent"
            style="@style/buttonStyle"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:text="@string/find_my_representatives_text"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/zip" />

        <Button
            android:id="@+id/button_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/buttonStyle"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/use_my_location_text"
            app:layout_constraintTop_toBottomOf="@id/button_search" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/txtview_representative_title"
            android:layout_width="match_parent"
            android:textSize="@dimen/big_text_size"
            android:padding="@dimen/margin_8"
            style="@style/txtView_bold"
            android:paddingBottom="@dimen/default_padding"
            android:text="@string/my_representatives"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/representative_constraint_layout" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerRepresentative"
            android:layout_width="match_parent"
            android:layout_height= "0dp"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginEnd="@dimen/margin_8"
            android:paddingBottom="@dimen/default_padding"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtview_representative_title" />

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>