<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="representative"
            type="com.example.android.politicalpreparedness.representative.model.Representative" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/profilePicImage"
            android:contentDescription="@string/rep_pic"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:adjustViewBounds="true"
            app:imageUrl="@{representative.official.photoUrl}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_profile" />

        <TextView
            android:id="@+id/textViewOfficeName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@{representative.office.name}"
            style="@style/txtView_bold"
            app:layout_constraintStart_toEndOf="@+id/profilePicImage"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewOfficialName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@{representative.official.name}"
            app:layout_constraintStart_toStartOf="@+id/textViewOfficeName"
            app:layout_constraintTop_toBottomOf="@+id/textViewOfficeName" />

        <TextView
            android:id="@+id/textViewOfficialParty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@{representative.official.party}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textViewOfficialName"
            app:layout_constraintTop_toBottomOf="@+id/textViewOfficialName" />


        <ImageView
            android:id="@+id/imageViewTwitter"
            android:contentDescription="@string/twitter_logo"
            style="@style/imageViewRepStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_twitter" />

        <ImageView
            android:id="@+id/imageViewFacebook"
            android:contentDescription="@string/facebook_logo"
            style="@style/imageViewRepStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageViewTwitter"
            app:srcCompat="@drawable/ic_facebook" />

        <ImageView
            android:id="@+id/imageViewWeb"
            android:contentDescription="@string/web_logo"
            style="@style/imageViewRepStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageViewFacebook"
            app:srcCompat="@drawable/ic_www" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>