<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <!-- Add image for home screen logo. -->

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="500dp"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/default_margin"
            android:contentDescription="@string/ballot_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.04000002"
            app:srcCompat="@drawable/ballot_logo" />

        <!--  Add Button to navigate to upcoming elections. -->


        <!--  Add Button to navigate to representatives. -->

        <Button
            android:id="@+id/upcomingElectionsBtn"
            style="@style/launchStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="@dimen/default_margin"
            android:text="@string/strUpcomingElections"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <Button
            android:id="@+id/findMyRepBtn"
            style="@style/launchStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="@dimen/default_margin"
            android:text="@string/strFindMyRep"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/upcomingElectionsBtn" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>