<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.election.VoterInfoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="@dimen/progress_bar"
            android:layout_height="@dimen/progress_bar"
            app:apiStatus="@{viewModel.status}"
            android:contentDescription="@string/progress_bar_content_description"
            android:indeterminateDrawable="@drawable/loading_animation"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--  Add title to toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/election_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            android:singleLine="true"
            android:background="@color/colorPrimaryDark"
            app:title="@{viewModel.selectedElection.name}"
            app:layout_constraintTop_toTopOf="parent" />

        <!--  Add visual styling -->
        <TextView
            android:id="@+id/election_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:text="@{viewModel.selectedElection.electionDay.toString()}"
            android:textSize="@dimen/default_text_size"
            app:layout_constraintTop_toBottomOf="@id/election_name"
            />

        <!-- visual styling and content -->
        <TextView
            android:id="@+id/state_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_election_info"
            android:textSize="@dimen/default_text_size"
            style="@style/txtView_bold"
            android:layout_marginTop="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@id/election_date"
            app:layout_constraintStart_toStartOf="@id/election_date" />

        <!--  click binding to open web URL -->
        <!-- visual styling and content -->
        <TextView
            android:id="@+id/state_locations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/voting_location_text"
            app:clickableText="@{viewModel.voterInfo.votingLocationUrl}"
            android:textSize="@dimen/default_text_size"
            app:layout_constraintTop_toBottomOf="@id/state_header"
            app:layout_constraintStart_toStartOf="@id/election_date" />

        <!-- click binding to open web URL -->
        <!-- visual styling and content -->
        <TextView
            android:id="@+id/state_ballot"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_height="wrap_content"
            android:text="@string/ballot_information_text"
            app:clickableText="@{viewModel.voterInfo.ballotInformationUrl}"
            android:textSize="@dimen/default_text_size"
            app:layout_constraintTop_toBottomOf="@id/state_locations"
            app:layout_constraintStart_toStartOf="@id/election_date" />

<!--        <androidx.constraintlayout.widget.Group-->
<!--            android:id="@+id/address_group"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:constraint_referenced_ids="state_correspondence_header,address" />-->

<!--        &lt;!&ndash;  Add visual styling and content &ndash;&gt;-->
<!--        <TextView-->
<!--            android:id="@+id/state_correspondence_header"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:layout_constraintTop_toBottomOf="@id/state_ballot"-->
<!--            app:layout_constraintStart_toStartOf="@id/election_date" />-->

<!--        &lt;!&ndash;  Add data binding &ndash;&gt;-->
<!--        <TextView-->
<!--            android:id="@+id/address"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:layout_constraintTop_toBottomOf="@id/state_correspondence_header"-->
<!--            app:layout_constraintStart_toStartOf="@id/election_date" />-->

        <!-- Button to save election to Room -->

        <Button
            android:id="@+id/followButton"
            style= "@style/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin"
            android:onClick="@{() -> viewModel.onFollowButtonClick()}"
            app:toggleButtonText="@{viewModel.isElectionFollowed}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>